# treeview_svelte

./: .gitignore  package-lock.json  package.json  rollup.config.js
service/: api.py  pyproject.toml
service/etc/: settings.py  settings.py.test
service/folder/: setting.txt
service/tests/: test_folder_api.py
src/: App.svelte  stores.js
src/component/: confirm.svelte  edit.svelte  root.svelte  save.svelte
