[tool.poetry]
name = "folder manipulate service"
version = "0.1.0"
description = ""
authors = ["Kenichi Tanino <ke.tanino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.32"
fs = "^2.4.15"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
